# OMPEval

./: CMakeLists.txt  equity.cpp
